Fix bug #10886 - INSERT ... SELECT ... ON DUPLICATE KEY UPDATE produces bad results

Temporary field wasn't restored to default values after ON DUPLICATE KEY
 UPDATE event, which results in wrong data being inserted in new record.